Oppdater build.gradle.kts (#432)